# foundry-research

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  PLAN-CHECKLIST.md  PLAN-REVISION-CHECKLIST.md  PLAN-REVISION.md  PLAN.md  PLAN2-CHECKLIST.md  PLAN2.md  PRINCIPLES.md  README.md  SKILL.md  SUGGESTIONS.md  copy-to-skills.sh  download  enrich  plan-checklist.md  plan.md  pyproject.toml  pyrightconfig.json  requirements.txt  ruff.toml  state
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
agents/: brief-writer.md  claim-extractor.md  claim-verifier.md  findings-logger.md  report-reviser.md  research-reader.md  research-verifier.md  source-acquisition.md  style-reviewer.md  synthesis-reviewer.md  synthesis-writer.md
docs/: architecture.md  configuration.md  grey-sources.md  potential-providers.md  providers.md  structured-evidence-layer.md  vision-cumulative.md  web-research-intelligence.md
docs/examples/: README.md  (+2 more)
hooks/: bootstrap-venv.sh  hooks.json
plan/: README.md  architecture.md  delegation-strategy.md  guardrails.md  implementation-order.md  multi-session.md  shared-deps.md  skill-prompt.md  synthesis-strategy.md  tests.md
scripts/: codex-dev-install.sh  download.py  enrich.py  search.py  state.py
tests/: conftest.py  helpers.py  test_dedup.py  test_deduplicate_findings.py  test_download.py  test_financial.py  test_http.py  test_metadata.py  test_metrics.py  test_provider_format.py  test_providers.py  test_quality.py  test_rate_limiter.py  test_shared.py  test_state.py
(+89 files in other folders)
