[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "deep-research"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "pymupdf4llm>=0.0.10",
    "pypdf>=4.0",
    "yfinance>=0.2",
]

[tool.setuptools.packages.find]
where = ["scripts"]
include = ["_shared*", "providers*"]
